# smolder

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
crates/smolder-cli/: Cargo.toml  README.md
crates/smolder-cli/src/: config.rs  db.rs  forge.rs  main.rs  rpc.rs
crates/smolder-cli/src/commands/: deploy.rs  export.rs  get.rs  init.rs  list.rs  mod.rs  serve.rs  sync.rs  wallet.rs
crates/smolder-cli/src/forge/: artifact.rs  broadcast.rs  mod.rs  types.rs
crates/smolder-cli/src/server/: error.rs  mod.rs  state.rs  static_files.rs
crates/smolder-cli/src/server/routes/: artifacts.rs  contracts.rs  deploy.rs  deployments.rs  health.rs  interact.rs  mod.rs  networks.rs  wallets.rs
crates/smolder-cli/src/server/routes/interact/: mod.rs  rpc.rs
crates/smolder-core/: Cargo.toml  README.md
crates/smolder-core/src/: abi.rs  bytecode.rs  dir.rs  error.rs  keyring.rs  lib.rs  models.rs  repository.rs  schema.rs  types.rs
crates/smolder-db/: Cargo.toml
crates/smolder-db/src/: lib.rs  models.rs  schema.rs  traits.rs
crates/smolder-db/src/repositories/: call_history.rs  contract.rs  deployment.rs  mod.rs  network.rs  wallet.rs
web/: README.md  biome.json  index.html  package.json  vite.config.ts
web/src/: index.css  main.tsx  router.tsx
web/src/api/: client.ts  types.ts
web/src/components/: deploy-modal.tsx  function-form.tsx  param-input.tsx
web/src/components/ui/: card-skeleton.tsx  empty-state.tsx  error-state.tsx  index.ts  stat-card.tsx
web/src/lib/: format.ts
web/src/pages/: contracts.tsx  dashboard.tsx  deploy.tsx  deployment-details.tsx  networks.tsx  not-found.tsx  wallets.tsx
