[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
smolder-core = { version = "0.2.0", path = "crates/smolder-core" }
smolder-db = { version = "0.2.0", path = "crates/smolder-db" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
alloy = { version = "1.3.0", features = ["full"] }
thiserror = "2"
hex = "0.4"
async-trait = "0.1"
color-eyre = "0.6"
console = "0.15"
dialoguer = "0.11"
