[package]
name = "smolder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Smolder - contract registry and interaction platform"
readme = "../../README.md"
repository = "https://github.com/roushou/smolder"
include = ["src/**/*", "assets/**/*", "Cargo.toml"]

[[bin]]
name = "smolder"
path = "src/main.rs"

[dependencies]
smolder-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
hex = "0.4"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
