[package]
name = "smolder-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite database implementation for Smolder"
repository = "https://github.com/roushou/smolder"

[dependencies]
smolder-core = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
